assets/css/admin.css
/* ... */
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history h4 {
  margin: 0 0 10px 0;
  font-size: 1.3em;
  line-height: 26px;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history p {
  font-size: 14px;
  line-height: 1.5;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history img {
  margin-top: 30px;
  max-width: 100%;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history span.label {
  margin-left: 10px;
  position: relative;
  color: #fff;
  border-radius: 20px;
  padding: 0 8px;
  font-size: 12px;
  height: 20px;
  line-height: 19px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-weight: normal;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history span.label.new {
  background: #3778ff;
  border: 1px solid #3778ff;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history span.label.improvement,
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history span.label.enhancement {
  background: #3aaa55;
  border: 1px solid #3aaa a;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history span.label.fix {
  background: #ff4772;
  border: 1px solid #ff4772;
}
.wpuf-whats-new .wedevs-changelog .wedevs-changelog-history span.label.tweak {
  background: #f9a825;
  border: 1px solid #ffa000;
}
#wpuf_subs_metabox .inside {
  margin: 0;
  padding: 0;
}
.wpuf-subscription-pack-settings {
  display: flex;
}
.wpuf-subscription-pack-settings nav {
  background-color: #f1f1f1;
  min-width: max-content;
  border-right: 1px solid #e5e5e5;
}
.wpuf-subscription-pack-settings nav ul,
.wpuf-subscription-pack-settings nav li {
  margin: 0;
}
.wpuf-subscription-pack-settings nav a {
  display: block;
  border: none;
  padding: 12px 5px 12px 15px;
  border-bottom: 1px solid #e5e5e5;
  border-right: 1px solid #e5e5e5;
  background-color: #f1f1f1;
  text-decoration: none;
  margin-right: -1px;
  font-weight: 500;
}
.wpuf-subscription-pack-settings nav a label {
  padding: 0.5rem;
  display: inline-block;
}
.wpuf-subscription-pack-settings nav a:focus,
.wpuf-subscription-pack-settings nav a:active {
  outline: 0;
  box-shadow: none;
}
.wpuf-subscription-pack-settings nav .tab-current a {
  border-right: 1px solid #fff;
  background: #fff;
  color: #2e4453;
}
.wpuf-subscription-pack-settings .subscription-nav-content {
  padding: 15px 25px;
  width: 100%;
}
.wpuf-subscription-pack-settings .subscription-nav-content section {
  display: none;
}
.wpuf-subscription-pack-settings .subscription-nav-content section.content-current {
  display: block;
}
.wpuf-subscription-pack-settings .subscription-nav-content section .form-table th {
  width: 150px;
  min-width: 150px;
}
.wpuf-subscription-pack-settings .subscription-nav-content section .form-table td {
  padding: 15px 0;
}

